--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,15 @@ version: 1.0.2+4
 homepage: https://github.com/mayurpitroda96/easy_audio_trimmer
 
 environment:
-  sdk: ">=2.18.4 <4.0.0"
+  sdk: ^3.7.0
 
 dependencies:
   flutter:
     sdk: flutter
 
   audioplayers: ^5.2.0
-  ffmpeg_kit_flutter: ^6.0.3
-  intl: ^0.18.1
+  ffmpeg_kit_flutter_new: ^2.0.0
+  intl: ^0.20.1
   path: ^1.8.2
   path_provider: ^2.0.11
 
@@ -21,4 +21,4 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.1
 
-flutter:
+# flutter:
